objects/agf__ADM_Release_Freeze_Status__c.object
<CustomObject>
    <fields>
        <fullName>agf__Blocking_or_P0_Bugs__c</fullName>
        <description>Number of P0/P1/Blocking Bugs</description>
        <label>Number of P0/P1/Blocking Bugs (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Bugs_Fixed_Week_of_RF__c</fullName>
        <label># Bugs Fixed Week of RF</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Bugs_TF_Found_Week_of_RF__c</fullName>
        <description>P0/P1/P2 Bugs/TF Found the Week of Release Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</description>
        <label>P0/P1/P2 Bugs/TF Found Week of RF</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Bugs_Test_Failures_Fixed_Week_of_RF__c</fullName>
        <description>Bugs/TF Fixed the Week of Release Freeze (explain if count is high relative to previous 2-3 weeks)</description>
        <label>Bugs/TF Fixed Week of RF</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Build__c</fullName>
        <formula>agf__Team_Release__r.agf__Build__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Build</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Changes_to_Hub_Agent__c</fullName>
        <description>Any changes to the Hub &amp; Agent?</description>
        <inlineHelpText>Any changes to the Hub &amp; Agent?</inlineHelpText>
        <label>Changes to Hub &amp; Agent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Changes_to_Logging__c</fullName>
        <description>Any changes to the way things are logged?</description>
        <inlineHelpText>Any changes to the way things are logged?</inlineHelpText>
        <label>Changes to Logging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Changes_to_ping_jsp__c</fullName>
        <description>Any changes to ping.jsp?</description>
        <inlineHelpText>Any changes to ping.jsp?</inlineHelpText>
        <label>Changes to ping.jsp</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Code_Coverage_Goals_Met__c</fullName>
        <description>Code coverage goals met.</description>
        <inlineHelpText>Code coverage goals met.</inlineHelpText>
        <label>Code Coverage Goals Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Code_Line_is_Releasable__c</fullName>
        <description>Code Line is Releasable – All New Features and Enhancements meet the Definition of Done and Code Line meets Additional Criteria below (Yes/No)</description>
        <inlineHelpText>Code Line is Releasable – All New Features and Enhancements meet the Definition of Done and Code Line meets Additional Criteria below (Yes/No)</inlineHelpText>
        <label>Code Line is Releasable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirmation of the Release Freeze Signoff</description>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__DB_Upgrade_Scripts_Complete_and_Verified__c</fullName>
        <description>DB Upgrade Scripts Complete and Verified (Yes/No/Not Applicable)</description>
        <inlineHelpText>DB Upgrade Scripts Complete and Verified (Yes/No/Not Applicable)</inlineHelpText>
        <label>DB Upgrade Scripts Complete and Verified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Documentation_Complete__c</fullName>
        <description>User documentation complete and checked in.</description>
        <inlineHelpText>User documentation complete and checked in.</inlineHelpText>
        <label>Documentation Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Explain_Auto_Integrations__c</fullName>
        <label>Explain Auto Integrations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Blocking_P0_Bugs__c</fullName>
        <label>Explain P0/P1/Blocking Bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Bugs_missing_Automation__c</fullName>
        <description>Explain if Total Number of Closed P0/P1/P2 Bugs and Closed Bugs-with-Cases that do not have automation is &gt; 0</description>
        <inlineHelpText>Explain if Total Number of Closed P0/P1/P2 Bugs and Closed Bugs-with-Cases that do not have automation is &gt; 0</inlineHelpText>
        <label>Explain Bugs missing Automation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Bugs_to_Fix__c</fullName>
        <label>Explain Bugs to Fix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Code_Coverage_goals_not_met__c</fullName>
        <label>Explain Code Coverage Goals Not Met</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_DB_Upgrade_Scripts_Incomplete__c</fullName>
        <description>Explain if DB Upgrade Scripts are Incomplete or Unverified</description>
        <inlineHelpText>Explain if DB Upgrade Scripts are Incomplete or Unverified</inlineHelpText>
        <label>Explain DB Upgrade Scripts Incomplete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Extended_ftest_Test_Failures__c</fullName>
        <label>Explain Extended ftest Test Failures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_High_Number_of_Bugs_to_Verify__c</fullName>
        <label>Explain Bugs to Verify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_High_Number_of_bugs__c</fullName>
        <label>Explain High Bug Count</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_High_TF_Count__c</fullName>
        <label>Explain High TF Count</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_High_TF_Find_Rate__c</fullName>
        <label>Explain High TF Find Rate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_High_TF_Fix_Rate__c</fullName>
        <label>Explain High TF Fix Rate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_P1_Bugs__c</fullName>
        <label>Explain Open P1 Bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_Regressions__c</fullName>
        <label>Explain Open Regressions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_User_Stories__c</fullName>
        <description>Explain any Open User Stories</description>
        <inlineHelpText>Explain any Open User Stories</inlineHelpText>
        <label>Explain Open User Stories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Test_Failures_older_than_1_day__c</fullName>
        <label>Explain Test Failures Older Than 1 Day</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_doc_incomplete__c</fullName>
        <label>Explain Doc Incomplete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_failure_to_pass_systes__c</fullName>
        <label>Explain Failure to Pass Performance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_find_rate_if_high__c</fullName>
        <label>Explain High Bug Find Rate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_fix_rate_if_high__c</fullName>
        <label>Explain High Fix Rate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_Code_Line_is_not_Releasable__c</fullName>
        <description>Provide explanation if the Code Line is not Releasable</description>
        <inlineHelpText>Provide explanation if the Code Line is not Releasable</inlineHelpText>
        <label>Explain if Code Line is not Releasable</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_TF_Exist__c</fullName>
        <description>Explain if your team has TF on basic ftest, basic selenium or utest.</description>
        <inlineHelpText>Explain if your team has TF on basic ftest, basic selenium or utest.</inlineHelpText>
        <label>Explain TF on basicftest/selenium/utest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_pre_scripts_testing_not_complete__c</fullName>
        <label>Explain Pre-Scripts Testing Incomplete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_release_sprint_goals_incomplete__c</fullName>
        <label>Explain Release Sprint Goals Incomplete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Features_Enabled_by_Retirement_Scripts__c</fullName>
        <description>Teams should call out any features that will be enabled when the retired scripts are run in the new zero downtime process.</description>
        <inlineHelpText>Call out any features that will be enabled when the retired scripts are run in the new zero downtime process.</inlineHelpText>
        <label>Features Enabled by Retirement Scripts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__New_Services_Requiring_Monitoring__c</fullName>
        <description>Any new services that need monitoring turned on?</description>
        <inlineHelpText>Any new services that need monitoring turned on?</inlineHelpText>
        <label>New Services Requiring Monitoring</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__No_Blocking_Bugs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No BLOCKING, RELEASE BLOCKING, or FEATURE BLOCKING bugs. All resolved bugs are Verified and Closed.</description>
        <inlineHelpText>No BLOCKING, RELEASE BLOCKING, or FEATURE BLOCKING bugs. All resolved bugs are Verified and Closed.</inlineHelpText>
        <label>No Blocking Bugs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Bugs_missing_Automation_0__c</fullName>
        <description>Total Number of Closed P0/P1/P2 Bugs and Closed Bugs-with-Cases that do not have automation (0)</description>
        <inlineHelpText>Total Number of Closed P0/P1/P2 Bugs and Closed Bugs-with-Cases that do not have automation (0)</inlineHelpText>
        <label>Number of Bugs missing Automation (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Extended_TF_to_Fix_3_days__c</fullName>
        <label>Number of Extended TF to Fix &gt;3 days (0)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Open_User_Stories_0__c</fullName>
        <description>Number of Open User Stories (0)</description>
        <inlineHelpText>Number of Open User Stories (0)</inlineHelpText>
        <label>Number of Open User Stories (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_P1_P2_Bugs__c</fullName>
        <description>Number of P1 &amp; P2 bugs/Test Failures that are not Verified and Closed.</description>
        <inlineHelpText>Number of P1 &amp; P2 bugs/Test Failures that are not Verified and Closed.</inlineHelpText>
        <label>Number of P1/P2 Bugs/Test Failures (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_TF_to_Fix_1_day_old__c</fullName>
        <label>Number of TF to Fix &gt;1 day old (0)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Open_Regressions__c</fullName>
        <inlineHelpText>Number of open regressions.  Should be 0 at Release Freeze.</inlineHelpText>
        <label>Number Open Regressions (0)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Other_Changes_for_RelEng__c</fullName>
        <description>Anything of interest that Release Engineering should be aware of?</description>
        <inlineHelpText>Anything of interest that Release Engineering should be aware of?</inlineHelpText>
        <label>Other Changes for RelEng</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Other_Changes_for_Tech_Ops__c</fullName>
        <description>Anything of interest that Tech Ops should be aware of?</description>
        <inlineHelpText>Anything of interest that Tech Ops should be aware of?</inlineHelpText>
        <label>Other Changes for Tech Ops</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__P0_P1_P2_Bugs_Found_Week_of_RF__c</fullName>
        <label>P0/P1/P2 Bugs Found Week of RF</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__P1_Bugs__c</fullName>
        <label>P1 Bugs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Passed_SysTest__c</fullName>
        <description>Performance/scalability of new features and existing functionality acceptable for release.</description>
        <inlineHelpText>Performance/scalability of new features and existing functionality acceptable for release.</inlineHelpText>
        <label>Passed Performance Testing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Pending_Auto_Integrations_0__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Number of Pending Auto-Integrations (0)</description>
        <inlineHelpText>Total Number of Pending Auto-Integrations (0)</inlineHelpText>
        <label>Number of Pending Auto-Integrations (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Post_Release_Freeze_Status_Updates__c</fullName>
        <label>Post Release Freeze Status Updates</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Pre_Scripts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Scripts Testing Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Product_Division__c</fullName>
        <formula>CASE(agf__Team_Release__r.agf__Scrum_Team__r.agf__Division__c, &quot;Applications&quot;, &quot;Applications&quot;, &quot;Core&quot;, &quot;Core&quot;, &quot;Platform&quot;, &quot;Platform&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Release_Sprint_Goals_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Release Sprint Goals Met/Complete.</description>
        <inlineHelpText>Release Sprint Goals Met/Complete.</inlineHelpText>
        <label>Release Sprint Goals Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <formula>agf__Team_Release__r.agf__Scrum_Team__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scrum Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Signoff_Date__c</fullName>
        <formula>IF( agf__Team_Signs_Off__c = true,   LastModifiedDate , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Stop_Monitoring_Disabled_Services__c</fullName>
        <description>Any existing services being disabled and need monitoring turned off?</description>
        <inlineHelpText>Any existing services being disabled and need monitoring turned off?</inlineHelpText>
        <label>Stop Monitoring Disabled Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__TF_Fixed_Week_of_RF__c</fullName>
        <label># TF Fixed Week of RF</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__TF_Found_Week_of_RF__c</fullName>
        <label>TF Found Week of RF</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Team_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Release</label>
        <referenceTo>agf__ADM_Team_Release__c</referenceTo>
        <relationshipName>R00NT0000000txqIMAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Team_Signoff_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Signoff Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Team_Signs_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Team signs off by checking the box.</description>
        <inlineHelpText>Team signs off by checking the box.</inlineHelpText>
        <label>Team Signoff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Test_Failures_older_than_1_day__c</fullName>
        <label>Test Failures Older Than 1 Day (0)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Test_Failures_older_than_allowable__c</fullName>
        <inlineHelpText>Total Number of Extended TF to Fix &gt;3 days old and Other TF to Fix &gt;1 day old (0)</inlineHelpText>
        <label>Test Failures Older Than Allowable Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Total_Bugs_Test_Failures_to_Verify__c</fullName>
        <description>Total Number of Fixed Bugs/TF to Verify</description>
        <label>Total Number of Fixed Bugs/TF to Verify</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Total_Number_of_Bugs_to_Fix__c</fullName>
        <label>Number of Bugs to Fix (max 1/Dev) (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Total_Number_of_Fixed_Bugs_to_Verify__c</fullName>
        <label>Number of Fixed Bugs to Verify (max1/QE)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Total_Number_of_TF_to_Fix__c</fullName>
        <label>Number of TF to Fix (max 1/Dev)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Total_number_of_bugs_TF_to_fix__c</fullName>
        <description>Total Number of Bugs/TF to Fix</description>
        <label>Total Number of Bugs/TF to Fix</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__X100_of_Test_Cases_Passing__c</fullName>
        <description>100% of manual and automated test cases passing.</description>
        <inlineHelpText>100% of manual and automated test cases passing.</inlineHelpText>
        <label>100% of Test Cases Passing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Zero_TF_basicftest_basicselenium_utest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Zero TF on the basicftest, basicselenium and utest at time of RF</description>
        <inlineHelpText>New Criteria for 172: 
Zero TF on these test suites at time of RF.</inlineHelpText>
        <label>Zero TF:basicftest, basicselenium, utest</label>
        <type>Checkbox</type>
    </fields>
    <label>Release Freeze Team Status</label>
    <nameField>
        <displayFormat>RFS-{0000000}</displayFormat>
        <label>Release Freeze Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Freeze Team Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>